--- a/frontend/src/config/config.development.json
+++ b/frontend/src/config/config.development.json
@@ -1,12 +1,15 @@
-[
-    {
-        "CONTRACT_ADDRESS": "0x2F1F82ce326FDDC2A045Cf17c22398697e88b9b7",
-        "TITLE": "Betting on Typhoon",
-        "DESCRIPTION": "Would the typhoon hit Taiwan in 2024?"
-    },
-    {
-        "CONTRACT_ADDRESS": "0x2F1F82ce326FDDC2A045Cf17c22398697e88b9b7",
-        "TITLE": "Betting on TSMC",
-        "DESCRIPTION": "Would price of TSMC reaches 1000 before 2024/12/31?"
-    }
-]
+{
+    "TOKEN_ADDRESS": "0x33B20EF7b9710d9f01B64B46694C547aF1bA601e",
+    "GAMES": [
+        {
+            "CONTRACT_ADDRESS": "0x82d64c326631B4E25cee422C571428874f67E58B",
+            "TITLE": "Betting on Typhoon",
+            "DESCRIPTION": "Would the typhoon hit Taiwan in 2024?"
+        },
+        {
+            "CONTRACT_ADDRESS": "0x82d64c326631B4E25cee422C571428874f67E58B",
+            "TITLE": "Betting on TSMC",
+            "DESCRIPTION": "Would price of TSMC reaches 1000 before 2024/12/31?"
+        }
+    ]
+}
