--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -33,3 +33,5 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+pacakge-lock.json
