--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.5",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.6"
+    "@nomicfoundation/hardhat-toolbox": "5.0.0",
+    "hardhat": "2.22.2"
   }
 }
