--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -16,9 +16,9 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
             add_header X-Frame-Options SAMEORIGIN;
             proxy_hide_header X-Frame-Options;
+            proxy_set_header X-Forwarded-Proto $is_behind_cloudflare;
         }
     }
 }
