--- a/frontend/src/config/config.production.json
+++ b/frontend/src/config/config.production.json
@@ -1,3 +1,4 @@
 {
-    "TOKEN_ADDRESS": "0x33B20EF7b9710d9f01B64B46694C547aF1bA601e"
+    "TOKEN_ADDRESS": "0x33B20EF7b9710d9f01B64B46694C547aF1bA601e",
+    "CONTRACT_ADDRESS": "0x3B881342b4870da96151c5C4662cEE154FcCD9bF"
 }
