--- a/frontend/src/config/config.production.json
+++ b/frontend/src/config/config.production.json
@@ -1,4 +1,4 @@
 {
     "TOKEN_ADDRESS": "0x26e0504E7546d0193c70e7F50c9f612911C7Fd5F",
-    "CONTRACT_ADDRESS": "0x50905e10A16238e127F8210198FeC702Aa0b4dEE"
+    "DEFAULT_CONTRACT_ADDRESS": "0x50905e10A16238e127F8210198FeC702Aa0b4dEE"
 }
